[2018r27] Cache update, temp. homepage 2, staff update, favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="../img/w.png"/>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -12,14 +14,20 @@
 <body class="wrapper">
     <div id="header"></div>
     <div class="content">
-        <div class="tmp alert alert_danger">
-            <h1 class="alert_h">Website Maintenance</h1>
-            Currently, WJTB is in the process of designing a <b>brand new website</b> for a streamline, user-friendly experience.
-            Expect major changes to the webpages and overall functionality of this website, effective <b>January 17, 2018</b>.
-            If you have any questions or concerns, please contact our Webmaster, <b>Spencer Gunning</b>, at <b><a href="mailto:swg5@njit.edu">swg5@njit.edu</a></b>.
-            <br>
-            <br>
-            <b>While maintenance continues, please note you are free to use the navigation bar to access other areas of our website<b/>.
+        <div class="tmp">
+            <div class="welcome welcome_wrap">
+                <h1 class="welcome_h">Welcome to WJTB Radio!</h1>
+                We're an undergraduate student organization at NJIT focused on broadcasting radio shows, handling sound at events, and providing audio recording services for our members!
+                <br><br>
+                Our broadcast lineup currently features over 15 shows hosted by students, airing throughout the week.
+                These shows span a wide variety of music from indie, electronic, classic rock, and will even host talk shows and dramatic readings.
+                Make sure you check out our <b><a href="/shows">schedule</a></b> so you don't miss out!
+            </div>
+            <div class="home_img">
+                <img src="../img/home/1.jpg" alt="">
+                <img src="../img/home/2.jpg" alt="">
+                <img src="../img/home/3.jpg" alt="">
+            </div>
         </div>
     </div>
     <div id="footer"></div>
