--- a/staff/index.html
+++ b/staff/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="../img/w.png"/>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/staff.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
@@ -13,71 +16,94 @@
     <div id="header"></div>
     <div class="content">
         <h1 class="h1_alt">Staff Information</h1>
-        <p class="subtext">Updated for Spring 2018</p>
+        <p class="subtext">Updated for Fall 2018</p>
         <hr noshade>
-        <p>
-            <b>General Manager</b>
-            <br>
-            Sean Regan
-            <br>
-            732-610-3751 | <b><a href="mailto:sjr38@njit.edu" class="black">sjr38@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Station Manager</b>
-            <br>
-            Kenny Eisenhardt
-            <br>
-            973-617-6377 | <b><a href="mailto:kce6@njit.edu" class="black">kce6@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Business Manager</b>
-            <br>
-            Tyler Hamilton
-            <br>
-            973-943-0330 | <b><a href="mailto:tlh22@njit.edu" class="black">tlh22@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Program Manager</b>
-            <br>
-            Nick Warholak
-            <br>
-            973-234-3651 | <b><a href="mailto:njw8@njit.edu" class="black">njw8@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Live Events Manager</b>
-            <br>
-            Dan Landers
-            <br>
-            908-938-8526 | <b><a href="mailto:djl46@njit.edu" class="black">djl46@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Content Manager</b>
-            <br>
-            Christopher Ho
-            <br>
-            201-398-5343 | <b><a href="mailto:ch254@njit.edu" class="black">ch254@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Public Relations Manager</b>
-            <br>
-            Connor Norris
-            <br>
-            862-368-9695 | <b><a href="mailto:cjn7@njit.edu" class="black">cjn7@njit.edu</a></b>
-        </p>
-        <br>
-        <p>
-            <b>Webmaster</b>
-            <br>
-            Spencer Gunning
-            <br>
-            908-655-7743 | <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b>
-        </p>
+        <div class="staff_wrapper">
+            <div class="card">
+                <img src="../img/staff/pres.png" alt="">
+                <p>
+                    <b id="staff_title">General Manager</b>
+                    <br>
+                    <span id="staff_name">Sean Regan</span>
+                    <br><br>
+                    732-610-3751 | <b><a href="mailto:sjr38@njit.edu" class="black">sjr38@njit.edu</a></b>
+                </p>
+            </div>
+            <div class="card">
+                <img src="../img/staff/stationman.png" alt="">
+                <p>
+                    <b id="staff_title">Station Manager</b>
+                    <br>
+                    <span id="staff_name">Connor Fleming</span>
+                    <br><br>
+                    732-675-9935 | <b><a href="mailto:cf232@njit.edu" class="black">cf232@njit.edu</a></b>
+                </p>
+            </div>
+        </div>
+        <div class="staff_wrapper">
+            <div class="card">
+                <img src="../img/staff/bizman.png" alt="">
+                <p>
+                    <b id="staff_title">Business Manager</b>
+                    <br>
+                    <span id="staff_name">Tyler Hamilton</span>
+                    <br><br>
+                    973-943-0330 | <b><a href="mailto:tlh22@njit.edu" class="black">tlh22@njit.edu</a></b>
+                </p>
+            </div>
+            <div class="card">
+                <img src="../img/staff/unknown.jpg" alt="">
+                <p>
+                    <b id="staff_title">Program Manager</b>
+                    <br>
+                    <span id="staff_name">Marisa Ghilarducci</span>
+                    <br><br>
+                    TBU | <b><a href="mailto:mg537@njit.edu" class="black">mg537@njit.edu</a></b>
+                </p>
+            </div>
+            <div class="card">
+                <img src="../img/staff/eventman.png" alt="">
+                <p>
+                    <b id="staff_title">Live Events Manager</b>
+                    <br>
+                    <span id="staff_name">Dan Landers</span>
+                    <br><br>
+                    908-938-8526 | <b><a href="mailto:djl46@njit.edu" class="black">djl46@njit.edu</a></b>
+                </p>
+            </div>
+        </div>
+        <div class="staff_wrapper">
+            <div class="card">
+                <img src="../img/staff/contentman.png" alt="">
+                <p>
+                    <b id="staff_title">Content Manager</b>
+                    <br>
+                    <span id="staff_name">Sean Charran</span>
+                    <br><br>
+                    973-460-9303 | <b><a href="mailto:sc53@njit.edu" class="black">sc53@njit.edu</a></b>
+                </p>
+            </div>
+            <div class="card">
+                <img src="../img/staff/prman.png" alt="">
+                <p>
+                    <b id="staff_title">Public Relations Manager</b>
+                    <br>
+                    <span id="staff_name">Connor Norris</span>
+                    <br><br>
+                    862-368-9695 | <b><a href="mailto:cjn7@njit.edu" class="black">cjn7@njit.edu</a></b>
+                </p>
+            </div>
+            <div class="card">
+                <img src="../img/staff/webmaster.png" alt="">
+                <p>
+                    <b id="staff_title">Webmaster</b>
+                    <br>
+                    <span id="staff_name">Spencer Gunning</span>
+                    <br><br>
+                    908-655-7743 | <b><a href="mailto:swg5@njit.edu" class="black">swg5@njit.edu</a></b>
+                </p>
+            </div>
+        </div>
     </div>
     <div id="footer"></div>
 </body>
