--- a/stream/index.html
+++ b/stream/index.html
@@ -15,18 +15,8 @@
     <div id="header"></div>
     <div class="content">
         <div class="tmp">
-            <div class="stream_a">
-                <h1 class="h1_alt">Stream</h1>
-                <audio controls>
-                    <source src="http://stream.njit.edu:8000/stream1.mp3">
-                </audio>
-            </div>
-            <div class="stream_b">
-                <h1 class="h1_alt">Mirror</h1>
-                <audio controls>
-                    <source src="http://stream.njit.edu:8000/stream1.mp3">
-                </audio>
-            </div>
+            <h1 class="h1_alt">Stream</h1>
+            <iframe src="https://tunein.com/embed/player/s183760/" style="width:100%; height:100px;" scrolling="no" frameborder="no"></iframe>
         </div>
     </div>
     <div id="footer"></div>
