[2018r29] Push req. by station manager

--- a/shows/index.html
+++ b/shows/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="../img/w.png"/>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../js/nav.js"></script>
     <script src="../js/main.js"></script>
@@ -15,7 +15,7 @@
     <div id="header"></div>
     <div class="content">
         <h1 class="h1_alt">Show Catalog</h1>
-        <p class="subtext">Updated 21 September 2018</p>
+        <p class="subtext">Updated 03 October 2018</p>
         <hr noshade>
         <h2 class="h2_alt">Monday</h2>
         <br>
@@ -51,6 +51,41 @@
         </div>
         <br>
         <hr noshade>
+        <h2 class="h2_alt">Tuesday</h2>
+        <br>
+        <div class="show">
+            <img src="../img/shows/basslip.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Basslip</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Tundah</b></p>
+                </div>
+                <p class="subsubtext">from 2:00PM to 2:55PM</p>
+                <p class="pfix">
+                    I'll be DJing live freeform sets.
+                    Everything on the fly.
+                    Be sure to tune in, especially if you love bass music.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/dinner_with_friends.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Dinner with Friends</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Adel Soliman</b> and <b>Sophia Mufti</b></p>
+                </div>
+                <p class="subsubtext">from 6:00PM to 6:25PM</p>
+                <p class="pfix">
+                    Dinner with Friends follows the fun adventures and life stories of your hosts Adel and Sophia, featuring other guest stars as well!
+                    Along with the craziest stories, we'll give you the best playlist to steam when your out having Dinner with Friends.
+                    New music, new stories, one place to find it all!
+                </p>
+            </div>
+        </div>
+        <br>
+        <hr noshade>
         <h2 class="h2_alt">Wednesday</h2>
         <br>
         <div class="show">
@@ -67,8 +102,134 @@
             </div>
         </div>
         <br>
+        <div class="show">
+            <img src="../img/shows/gt7.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Garbage Theatre 7</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Connor Norris</b> and <b>Spencer Gunning</b></p>
+                </div>
+                <p class="subsubtext">from 12:00PM to 12:55PM</p>
+                <p class="pfix">
+                    Is it time? It's almost time. Garbage Theatre is back, it's not reading Ready Player One, and it's self-destructing in upon itself.
+                    Come listen to us review some fanfictions, quick!
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/words_with_nerds.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Words with Nerds</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Alex Rodriguez</b> and <b>Jake Piccolo</b></p>
+                </div>
+                <p class="subsubtext">from 7:00PM to 7:55PM</p>
+                <p class="pfix">
+                    Like a nasty cold or a student that just won't graduate, Words With Nerds is back yet again.
+                    Get ready for all new epic adventures featuring your favorite weirdos, Alex and Jake, and for the first time in forever, Connor himself may be popping up occasionally!
+                    (So might Patrick Stewart. We're working on it.)
+                    Get ready for more jokes, more hilarious commentary, more Tom Jones, and more of your time wasted.
+                    Hold on to your pants, because it's gonna be a wild ride.
+                    We think.
+                </p>
+            </div>
+        </div>
+        <br>
+        <hr noshade>
+        <h2 class="h2_alt">Thursday</h2>
+        <br>
+        <div class="show">
+            <img src="../img/shows/funkradio.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">The Funk Block</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Rob Murphy</b></p>
+                </div>
+                <p class="subsubtext">from 3:00PM to 3:55PM</p>
+                <p class="pfix">
+                    Keeping the funk alive: One hour of classic funk music.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/mental_syrup.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Mental Syrup</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>March Roth</b> and <b>Hassan Elsaid</b></p>
+                </div>
+                <p class="subsubtext">from 4:00PM to 4:25PM</p>
+                <p class="pfix">
+                    A weekly talkshow examining modern developments and discoveries in science and technologies and how they will affect the future.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/gamingwithgoons.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Gaming with Goons Radio</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Tristan Ponceca</b>, <b>Franklin Estrella</b> and <b>Sean Leishman</b></p>
+                </div>
+                <p class="subsubtext">from 4:30PM to 5:25PM</p>
+                <p class="pfix">
+                    The rise of eSports over the last decade has been a giant upward spiral that seemingly came out of nowhere.
+                    From people's basements for pennies to the Madison Square Garden for millions of dollars.
+                    Competitive gaming has had an enormous impact on how people approach games, and if you like games and have no idea where to start or if you're a seasoned basement dweller veteran we're live every week to deliver.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/macattack.jpg" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">MacAttack!</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>DJ J-MAgiC</b></p>
+                </div>
+                <p class="subsubtext">from 6:00PM to 6:55PM</p>
+                <p class="pfix">
+                    This music show is a compilation of stunning navalgaze and awe inspiring cerebral mind melt.
+                    In MacAttack! we dive down to the challenger deep to dredg up some deep music ment to be listened to.
+                    Expect everything from experimental tribal viking metal to new school triphop on this show that is meant to showcase great music that you probably haven’t heard of.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/indie_extravaganza.jpg" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Indie Extravaganza</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Teo Akil</b></p>
+                </div>
+                <p class="subsubtext">from 7:00PM to 7:55PM</p>
+                <p class="pfix">
+                    A showcase of Indie music and all of its styles from the 80's to the modern day.
+                    Featuring a different sub-genre each week!
+                </p>
+            </div>
+        </div>
+        <br>
         <hr noshade>
         <h2 class="h2_alt">Friday</h2>
+        <br>
+        <div class="show">
+            <img src="../img/shows/surge.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">The Surge</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Sergio Zurita</b></p>
+                </div>
+                <p class="subsubtext">from 10:00AM to 10:55AM</p>
+                <p class="pfix">
+                    Dive into the surge of heart pumping electronic music.
+                </p>
+            </div>
+        </div>
         <br>
         <div class="show">
             <img src="../img/shows/ceringshow.png" alt="">
@@ -81,6 +242,34 @@
                 <p class="pfix">
                     The CERiNG Show is an hour-long program exploring the various sub-genres of electronic music, ranging from vaporwave and nu-disco to hardstyle and trip hop.
                     Tune in for a taste of electronic music, and traffic and weather on the half-hour!
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/avbs.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">AirWrecka's Vitamin Bass Supplements</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Erica Concolino</b></p>
+                </div>
+                <p class="subsubtext">from 5:00PM to 5:55PM</p>
+                <p class="pfix">
+                    New and local electronic music for your aural well-being.
+                </p>
+            </div>
+        </div>
+        <br>
+        <div class="show">
+            <img src="../img/shows/drinkin_josh.png" alt="">
+            <div class="show_desc">
+                <div class="all_inline">
+                    <h3 class="h3_alt">Drinkin' Josh</h3>
+                    <p>&nbsp;&nbsp;&nbsp;hosted by <b>Connor Fleming</b>> amd <b>Jake "TheMilkman961" Piccolo</b></p>
+                </div>
+                <p class="subsubtext">from 7:00PM to 7:55PM</p>
+                <p class="pfix">
+                    A show where people who may or may not be intoxicated fawn over their favorite show; Drake and Josh!
                 </p>
             </div>
         </div>
