--- a/private/footer.html
+++ b/private/footer.html
@@ -7,9 +7,10 @@
         </a>
         <span id="f_center">&#169; 2018 NJIT Broadcasting Association</span>
         <span id="f_right">
-            <a class="fa fa-facebook" href="https://www.facebook.com/NJITWJTBRADIO/" target="_blank"></a>
-            <a class="fa fa-twitter" href="https://twitter.com/wjtb" target="_blank"></a>
-            <a class="fa fa-instagram" href="https://www.instagram.com/wjtbradio/" target="_blank"></a>
+            <a class="fab fa-facebook" href="https://www.facebook.com/NJITWJTBRADIO/" target="_blank"></a>
+            <a class="fab fa-twitter" href="https://twitter.com/wjtb" target="_blank"></a>
+            <a class="fab fa-instagram" href="https://www.instagram.com/wjtbradio/" target="_blank"></a>
+            <a class="fab fa-discord" href="http://discord.gg/XXHMpQb" target="_blank"></a>
         </span>
     </footer>
 </body>
