Taking a crack at adding stream direct links.
Also cleaned up the navbar

--- a/private/header.html
+++ b/private/header.html
@@ -2,40 +2,12 @@
 <html>
 <body>
     <div class="nav" id="nav">
-        <a href="/">
+        <a href="http://wjtb.njit.edu">
             <img src="../img/wjtb.png" alt="">
         </a>
         <div class="links">
-            <a href="/">Home</a>
-            <a href="/stream">Stream</a>
-            <a href="javascript:void(0)" id="a_shows" onClick="navtab_id(this.id)">Programs</a>
-            <a href="/events">Events</a>
-            <a href="javascript:void(0)" id="a_forms" onClick="navtab_id(this.id)">Forms</a>
-            <a href="javascript:void(0)" id="a_about" onClick="navtab_id(this.id)">About</a>
-        </div>
-    </div>
-    <div class="subnav" id="subnav">
-        <div class="navtab" id="nt_shows">
-            <span>Programs</span>
-            <div class="sublinks">
-                <a href="/shows">Shows</a>
-                <a href="/showstreams">Showstreams</a>
-            </div>
-        </div>
-        <div class="navtab" id="nt_forms">
-            <span>Forms</span>
-            <div class="sublinks">
-                <a href="https://docs.google.com/forms/d/1K3a-fqbWfnIXF3KP89Or_nbvUQtZ1o7oaw_bRn9CHUo">Show Request</a>
-                <a href="https://docs.google.com/forms/d/1DtlNZxMAQ_z3C_kBU5UjFmgqaPGst1AC_BIXDofzctU">Live Sound</a>
-            </div>
-        </div>
-        <div class="navtab" id="nt_about">
-            <span>About</span>
-            <div class="sublinks">
-                <a href="/staff">Staff</a>
-                <a href="/rules">Rules &#38; Regulations</a>
-                <a href="/constitution">Constitution</a>
-            </div>
+            <a href="http://wjtb.njit.edu">Visit the legend</a>
+            <img href="http://stream.njit.edu:8000/stream1.mp3" src="../img/home/nyanFloppy.gif">Click this cat to download stream1</img>
         </div>
     </div>
 </body>
