--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <div class="content">
             <h1 class="h1_alt">Stream</h1>
             <audio id="stream1" class="video-js vjs-default-skin" controls="" preload="no" width="400" height="400" poster="./img/home/stream1.jpg" data-setup="{}">;
+            <a href="http://stream.njit.edu:8000/stream1.mp3.m3u"><img src="../img/home/nyanFloppy.gif"></img></a>
                     <source src="http://stream.njit.edu:8000/stream1.mp3" type="audio/mp3">
                     <script src="./js/video.js.download"></script>
         </div>
         <div class="content">
             <h1 class="h1_alt">Stream2</h1>
             <audio id="stream2" class="video-js vjs-default-skin" controls="" preload="no" width="400" height="400" poster="./img/home/stream2.jpg" data-setup="{}">;
+            <a href="http://stream.njit.edu:8000/stream2.m3u"><img src="../img/home/nyanFloppy.gif"></img></a>
                     <source src="http://stream.njit.edu:8000/stream2" type="audio/mp3">
                     <script src="./js/video.js.download"></script>
         </div>
