--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
     <div id="header"></div>
     <div class="content">
         <div class="content">
-            <h1 class="h1_alt">Stream</h1>
+            <h1 class="h1_alt">Stream<a href="http://stream.njit.edu:8000/stream1.mp3.m3u"><img src="../img/home/nyanFloppy.gif"></img></a></h1>
             <audio id="stream1" class="video-js vjs-default-skin" controls="" preload="no" width="400" height="400" poster="./img/home/stream1.jpg" data-setup="{}">;
                     <source src="http://stream.njit.edu:8000/stream1.mp3" type="audio/mp3">
                     <script src="./js/video.js.download"></script>
-            <div class="tmp"><a href="http://stream.njit.edu:8000/stream1.mp3.m3u"><img src="../img/home/nyanFloppy.gif"></img></a></div>
         </div>
         <div class="content">
-            <h1 class="h1_alt">Stream2</h1>
+            <h1 class="h1_alt">Stream2<a href="http://stream.njit.edu:8000/stream2.m3u"><img src="../img/home/nyanFloppy.gif"></img></a></h1>
             <audio id="stream2" class="video-js vjs-default-skin" controls="" preload="no" width="400" height="400" poster="./img/home/stream2.jpg" data-setup="{}">;
                     <source src="http://stream.njit.edu:8000/stream2" type="audio/mp3">
                     <script src="./js/video.js.download"></script>
-            <div class="tmp"><a href="http://stream.njit.edu:8000/stream2.m3u"><img src="../img/home/nyanFloppy.gif"></img></a></div>
         </div>
     </div>
     <div id="footer"></div>
