Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link href="./css/video-js.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./js/videojs-ie8.min.js.download"></script>
+    <script src="./js/videojs-ie8.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/main.js"></script>
     <title>Stream &#8211; WJTB Radio</title>
@@ -20,13 +20,13 @@
             <h1 class="h1_alt">Stream<a href="http://stream.njit.edu:8000/stream1.mp3.m3u"><img src="../img/home/nyanFloppy.gif"></img></a></h1>
             <audio id="stream1" class="video-js vjs-default-skin" controls="" preload="no" width="400" height="400" poster="./img/home/stream1.jpg" data-setup="{}">;
                     <source src="http://stream.njit.edu:8000/stream1.mp3" type="audio/mp3">
-                    <script src="./js/video.js.download"></script>
+                    <script src="./js/video.js"></script>
         </div>
         <div class="content">
             <h1 class="h1_alt">Stream2<a href="http://stream.njit.edu:8000/stream2.m3u"><img src="../img/home/nyanFloppy.gif"></img></a></h1>
             <audio id="stream2" class="video-js vjs-default-skin" controls="" preload="no" width="400" height="400" poster="./img/home/stream2.jpg" data-setup="{}">;
                     <source src="http://stream.njit.edu:8000/stream2" type="audio/mp3">
-                    <script src="./js/video.js.download"></script>
+                    <script src="./js/video.js"></script>
         </div>
     </div>
     <div id="footer"></div>
