Testing automatic resizing on the video.js players

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="content">
         <div class="content">
             <h1 class="h1_alt">Stream<a href="http://stream.njit.edu:8000/stream1.mp3.m3u"><img src="../img/home/nyanFloppy.gif" height="31" width="45"></img></a></h1>
-            <audio id="stream1" class="video-js vjs-default-skin" controls="" preload="no" width="444" height="250" poster="./img/home/stream1.jpg" data-setup="{}">;
+            <audio id="stream1" class="video-js vjs-default-skin vjs-16-9" controls="" preload="no" width="444" height="250" poster="./img/home/stream1.jpg" data-setup="{}">;
                     <source src="http://stream.njit.edu:8000/stream1.mp3" type="audio/mp3">
                     <script src="./js/video.js"></script>
         </div>
         <div class="content">
             <h1 class="h1_alt">Stream2<a href="http://stream.njit.edu:8000/stream2.m3u"><img src="../img/home/nyanFloppy.gif" height="31" width="45"></img></a></h1>
-            <audio id="stream2" class="video-js vjs-default-skin" controls="" preload="no" width="444" height="250" poster="./img/home/stream2.jpg" data-setup="{}">;
+            <audio id="stream2" class="video-js vjs-default-skin vjs-4-3" controls="" preload="no" width="444" height="250" poster="./img/home/stream2.jpg" data-setup="{}">;
                     <source src="http://stream.njit.edu:8000/stream2" type="audio/mp3">
                     <script src="./js/video.js"></script>
         </div>
